--- a/ToDo_UI/package.json
+++ b/ToDo_UI/package.json
@@ -16,7 +16,9 @@
     "axios": "^1.5.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
     "vite": "^4.5.0"
   },
